--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bt_file_cache"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["calvarez <calvarez@bachuetech.biz>"]
 description = "A caching mechanism for downloading and storing files from URLs"
 keywords = ["file", "storage", "cache"]
 categories = ["filesystem","caching"]
-repository = "https://github.com/bachuetech/"
+repository = "https://github.com/bachuetech/bt_file_cache.git"
 readme = "README.md"
-homepage = "https://github.com/bachuetech/"
+homepage = "https://github.com/bachuetech/bt_file_cache"
 license = "GPL-3.0-only"
 
 [dependencies]
@@ -17,3 +17,6 @@ bt_logger = "0.2.5"
 once_cell = "1.21.3"
 reqwest = {version="0.12.24", features = ["blocking","rustls-tls"]}
 sha3 = "0.10.8"
+
+[dev-dependencies]
+regex = "1.12.2"
