--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bt_file_cache"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 authors = ["calvarez <calvarez@bachuetech.biz>"]
 description = "A caching mechanism for downloading and storing files from URLs"
@@ -20,3 +20,5 @@ sha3 = "0.10.8"
 
 [dev-dependencies]
 regex = "1.12.2"
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
+
